Properly remap string indices before asserting equality

The string indices in the IP belong to the other file and thus
will mismatch. We need to remap them before we can commpare the
data in the assertion correctly.

BUG: 379220